--- a/theme/templates/admin/base.html
+++ b/theme/templates/admin/base.html
@@ -31,7 +31,7 @@
 <![endif]-->
 <!-- The following CSS are included as plugins and can be removed if unused-->
 	
-<link href="{% static 'admin/plugins/form-fseditor/fseditor.css' %}" type="text/css" rel="stylesheet">                      		<!-- FullScreen Editor -->
+<!--<link href="{% static 'admin/plugins/form-fseditor/fseditor.css' %}" type="text/css" rel="stylesheet">  -->                    		<!-- FullScreen Editor -->
 <link href="{% static 'admin/css/custom.css' %}" type="text/css" rel="stylesheet">  
 {% endblock %}
 
@@ -163,12 +163,11 @@
 	<script src="{% static 'admin/js/application.js' %}"></script>
 	<!-- End loading site level scripts -->
 	<!-- Load page level scripts-->
-	<script src="{% static 'admin/plugins/form-fseditor/jquery.fseditor-min.js' %}"></script>            			<!-- Fullscreen Editor -->
-	<script src="{% static 'admin/plugins/bootbox/bootbox.js' %}"></script> 	<!-- Bootbox -->
+	<!--<script src="{% static 'admin/plugins/form-fseditor/jquery.fseditor-min.js' %}"></script>-->            			<!-- Fullscreen Editor -->
+	<!--<script src="{% static 'admin/plugins/bootbox/bootbox.js' %}"></script>--> 	<!-- Bootbox -->
 	<script src="{% static 'admin/demo/demo.js' %}"></script>
-	<script src="{% static 'admin/demo/demo-switcher.js' %}"></script>
-	<script src="{% static 'admin/plugins/form-inputmask/jquery.inputmask.bundle.min.js' %}"></script>  	<!-- Input Masks Plugin -->
-	<script src="{% static 'admin/demo/demo-mask.js' %}"></script>
+	<!--<script src="{% static 'admin/plugins/form-inputmask/jquery.inputmask.bundle.min.js' %}"></script>-->  	<!-- Input Masks Plugin -->
+	<!--<script src="{% static 'admin/demo/demo-mask.js' %}"></script>-->
 	<!-- End loading page level scripts-->
 {% endblock %}
 
