--- a/theme/templates/admin/includes/dropdown_menu.html
+++ b/theme/templates/admin/includes/dropdown_menu.html
@@ -20,13 +20,13 @@
 			<div class="widget stay-on-collapse" id="widget-sidebar">
 				<nav role="navigation" class="widget-body">
 					<ul class="acc-menu">
+						<!--<li class="nav-separator"><span>Главное меню</span></li>-->
 						<li class="nav-separator"><span>Главное меню</span></li>
 						<li>
 							<a class="withripple" href="/admin/"><span class="icon">
-								<i class="material-icons">home</i></span><span>Настройки магазина</span>
+								<i class="material-icons">home</i></span><span>Главная</span>
 							</a>
 						</li>
-						<li class="nav-separator"><span>Дополнительное меню</span></li>
 						{% for app in dropdown_menu_app_list %}
 						<li class="hasChild">
 							<a class="withripple" href="javascript:;">
