--- a/theme/templates/accounts/shop_profile.html
+++ b/theme/templates/accounts/shop_profile.html
@@ -72,7 +72,7 @@
 
 <div class="sixteen columns margin-top-50">
 <span class="line" style="margin-bottom:0px;"></span>
-	{% include "accounts/includes/user_widget.html" %}
+	{# {% include "accounts/includes/user_widget.html" %} #}
 </div>
 {% endblock %}
 
