image display on small devices in admin dashboard

--- a/theme/static/admin/css/custom.css
+++ b/theme/static/admin/css/custom.css
@@ -420,6 +420,7 @@ select#id_categories {
 .panel-image img {
     position: relative;
     width: 100%;
+    max-width: 100%;
     /*height: 80px;*/
     /* for IE 6 */
 }
